cmake_minimum_required(VERSION 3.10)
project(YourProjectName)

add_subdirectory(cotePracCHJ2024)

add_executable(cotePracCHJ2024_ProblemSolving_homework1 cotePracCHJ2024/ProblemSolving/homework1.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_homework2 cotePracCHJ2024/ProblemSolving/homework2.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_homework3 cotePracCHJ2024/ProblemSolving/homework3.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_homework4 cotePracCHJ2024/ProblemSolving/homework4.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_homework5 cotePracCHJ2024/ProblemSolving/homework5.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_A1_rangeSum cotePracCHJ2024/ProblemSolving/A1_rangeSum.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_26 cotePracCHJ2024/ProblemSolving/26.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_homeworkA1 cotePracCHJ2024/ProblemSolving/homeworkA1.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_homeworkA2 cotePracCHJ2024/ProblemSolving/homeworkA2.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_67 cotePracCHJ2024/ProblemSolving/67.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_23 cotePracCHJ2024/ProblemSolving/23.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_47 cotePracCHJ2024/ProblemSolving/47.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_25 cotePracCHJ2024/ProblemSolving/25.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_0 cotePracCHJ2024/ProblemSolving/0.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_1 cotePracCHJ2024/ProblemSolving/1.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_2 cotePracCHJ2024/ProblemSolving/2.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_3 cotePracCHJ2024/ProblemSolving/3.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_4 cotePracCHJ2024/ProblemSolving/4.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_5 cotePracCHJ2024/ProblemSolving/5.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_6 cotePracCHJ2024/ProblemSolving/6.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_7 cotePracCHJ2024/ProblemSolving/7.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_8 cotePracCHJ2024/ProblemSolving/8.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_9 cotePracCHJ2024/ProblemSolving/9.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_14 cotePracCHJ2024/ProblemSolving/14.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_B cotePracCHJ2024/ProblemSolving/B.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_C cotePracCHJ2024/ProblemSolving/C.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_E cotePracCHJ2024/ProblemSolving/E.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_F cotePracCHJ2024/ProblemSolving/F.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_21 cotePracCHJ2024/ProblemSolving/21.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_29 cotePracCHJ2024/ProblemSolving/29.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_31 cotePracCHJ2024/ProblemSolving/31.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_primeFactorization cotePracCHJ2024/ProblemSolving/primeFactorization.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_my_payground cotePracCHJ2024/ProblemSolving/my_payground.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_42 cotePracCHJ2024/ProblemSolving/42.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_43 cotePracCHJ2024/ProblemSolving/43.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_45 cotePracCHJ2024/ProblemSolving/45.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_47-2 cotePracCHJ2024/ProblemSolving/47-2.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_48 cotePracCHJ2024/ProblemSolving/48.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_49 cotePracCHJ2024/ProblemSolving/49.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_46 cotePracCHJ2024/ProblemSolving/46.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_49-2 cotePracCHJ2024/ProblemSolving/49-2.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_backjun10773 cotePracCHJ2024/ProblemSolving/backjun10773.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_backjun3986 cotePracCHJ2024/ProblemSolving/backjun3986.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_28 cotePracCHJ2024/ProblemSolving/28.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_44 cotePracCHJ2024/ProblemSolving/44.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_59_timeMachine cotePracCHJ2024/ProblemSolving/59_timeMachine.cpp)
add_executable(cotePracCHJ2024_ProblemSolving_50 cotePracCHJ2024/ProblemSolving/50.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_50 cotePracCHJ2024/ProblemSolving2/50.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_51 cotePracCHJ2024/ProblemSolving2/51.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_65 cotePracCHJ2024/ProblemSolving2/65.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_64 cotePracCHJ2024/ProblemSolving2/64.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_66 cotePracCHJ2024/ProblemSolving2/66.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_59_timeMachine cotePracCHJ2024/ProblemSolving2/59_timeMachine.cpp)
add_executable(cotePracCHJ2024_Algorithm_LongestCommonSubsequence cotePracCHJ2024/Algorithm/LongestCommonSubsequence.cpp)
add_executable(cotePracCHJ2024_Algorithm_OptimalPathHomework cotePracCHJ2024/Algorithm/OptimalPathHomework.cpp)
add_executable(cotePracCHJ2024_Algorithm_Dijstra2 cotePracCHJ2024/Algorithm/Dijstra2.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_56adjmatrix cotePracCHJ2024/ProblemSolving2/56adjmatrix.cpp)
add_executable(cotePracCHJ2024_Algorithm_Kary cotePracCHJ2024/Algorithm/Kary.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_my_playground cotePracCHJ2024/ProblemSolving2/my_playground.cpp)
add_executable(cotePracCHJ2024_AlgorithmClub_2_club1 cotePracCHJ2024/AlgorithmClub/2/club1.cpp)
add_executable(cotePracCHJ2024_AlgorithmClub_2_club3 cotePracCHJ2024/AlgorithmClub/2/club3.cpp)
add_executable(cotePracCHJ2024_AlgorithmClub_3_c1 cotePracCHJ2024/AlgorithmClub/3/c1.cpp)
add_executable(cotePracCHJ2024_AlgorithmClub_3_c3 cotePracCHJ2024/AlgorithmClub/3/c3.cpp)
add_executable(cotePracCHJ2024_Algorithm_YonseiWaterpark cotePracCHJ2024/Algorithm/YonseiWaterpark.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_assignment_1 cotePracCHJ2024/ProblemSolving2/assignment/1.cpp)
add_executable(cotePracCHJ2024_ProblemSolving2_assignment_2 cotePracCHJ2024/ProblemSolving2/assignment/2.cpp)
add_executable(cotePracCHJ2024_Algorithm_assignment_Maze cotePracCHJ2024/Algorithm/assignment/Maze.cpp)